modified in file

--- a/templates/wheather.hbs
+++ b/templates/wheather.hbs
@@ -9,7 +9,7 @@
 <body>
 	{{>navbar}}
 		<div class="wcard d-flex justify-content-center align-items-center flex-column">
-			<h1 class="text-center text-danger">Search the conditions by City Name </h1>
+			<h1 class="text-center text-danger">Search the wheather by City Name </h1>
 			<input type="text" placeholder="Enter the City Name" id="srch" class="srch">
 			<button class="sbtn">Find</button>	
 			<div class="card my-5 bg-dark">
